# rtos-riscv-do178c

./: Cargo.toml  boot.S  build.rs  link.ld  memory.x  prova  result  todo  trap.S
.cargo/: config.toml
asm/: trap.S
documents/: SDD_Minimal_RTOS_DO178C.md  SRD_Minimal_RTOS_DO178C.md  SVCP_Minimal_RTOS_DO178C.md
documents/english /: SDD_Minimal_RTOS_DO178C_EN.md  SRD_Minimal_RTOS_DO178C_EN.md
documents/italian/: SDD_Minimal_RTOS_DO178C_IT.md  SRD_Minimal_RTOS_DO178C_IT.md
src/: main.rs  panic_handler.rs
src/arch/: mod.rs  timer.rs  trap.rs
src/drivers/: uart.rs
src/kernel/: mod.rs  services.rs  task.rs
verification/Untitled/: lake-manifest.json
verification/model/scheduler.toolbox/: scheduler___Model_1_SnapShot_1758830793782.launch  scheduler___Model_1_SnapShot_1758831161637.launch
verification/scheduler.toolbox/: scheduler___Model_1_SnapShot_1758830371697.launch  scheduler___Model_1_SnapShot_1758830516198.launch  scheduler___Model_1_SnapShot_1758831148732.launch
verification/scheduler.toolbox/Model_1/: MC.cfg  MC.tla  scheduler.tla
verification/scheduler.toolbox/Model_1_SnapShot_1758830371697/: MC.cfg  MC.tla  MC_TE.out
verification/scheduler.toolbox/Model_1_SnapShot_1758830516198/: MC_TE.out
verification/scheduler.toolbox/Model_1_SnapShot_1758830793782/: MC.cfg  MC_TE.out
verification/scheduler.toolbox/Model_1_SnapShot_1758830907029/: MC.cfg  MC.out  scheduler.tla
verification/scheduler.toolbox/Model_1_SnapShot_1758831148732/: MC.cfg  MC.tla  MC_TE.out
verification/tla+/scheduler.toolbox/: .project  scheduler___Model_1.launch  (+1 more)
(+8 files in other folders)
